# libAntarcticaRoot

./: CMakeLists.txt  Config.cmake.in  LinkDef.h  Makefile  README.md  downloadBEDMAP2subset.sh  rootlogon.C
cmake/: AntarcticaRootConfig.cmake  rootLibList.txt
include/: AntarcticAtmosphere.h  AntarcticaGeometry.h  CMakeLists.txt  Geoid.h  LinkDef.h  RefractionModel.h
include/core/: Geoid.h
src/: AntarcticaAtmosphere.cxx  AntarcticaGeometry.cxx  BaseList.cxx  BedmapReader.cxx  CMakeLists.txt  RefractionModel.cxx
src/core/: Geoid.cxx
src/misc/: TGraphAntarctica.cxx
